HW2/part4/t44.output
running e2c
compiling the C generated code
t44.c: In function ‘main’:
t44.c:4:1: warning: useless type name in empty declaration
 int ;
 ^
t44.c:5:2: error: expected expression before ‘=’ token
  = 999;
  ^
t44.c:6:15: error: expected expression before ‘)’ token
 printf("",  - );
               ^
t44.c:7:11: error: expected expression before ‘)’ token
 if( 0 >= ()){
           ^
t44.c:8:8: warning: zero-length gnu_printf format string [-Wformat-zero-length]
 printf("", 1111);
        ^
t44.c:9:1: error: expected ‘}’ before ‘else’
 else {int ;
 ^
t44.c:9:1: warning: useless type name in empty declaration
t44.c:10:2: error: expected expression before ‘=’ token
  = 8888;
  ^
t44.c:11:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t44.c:12:2: error: expected expression before ‘=’ token
  = 11;
  ^
t44.c:13:2: error: expected expression before ‘=’ token
  =  - 10000;
  ^
t44.c:14:2: error: expected expression before ‘=’ token
  =  - 1;
  ^
t44.c:15:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t44.c:16:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t44.c:17:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t44.c:18:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t44.c:19:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t44.c:20:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t44.c:21:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t44.c:22:1: error: expected declaration or statement at end of input
 }
 ^
